viper skeleton updates

--- a/application/skeleton/app/client/public/locales/en_GB/commerce.json
+++ b/application/skeleton/app/client/public/locales/en_GB/commerce.json
@@ -57,7 +57,41 @@
     "UnexpectedError": "An unexpected error occurred.",
     "Errors": {
       "INVALID_QUANTITY_ERROR": "The requested quantity is not available.",
-      "INVALID_COUPON_CODE_ERROR": "The coupon code {{ couponCode }} is not valid."
+      "INSUFFICIENT_STOCK_ERROR": "The requested quantity is not available.",
+      "INVALID_COUPON_CODE_ERROR": "The coupon code {{ couponCode }} is not valid.",
+      "CART_ADDCOUPON_ERROR": "Error while adding coupon: {{ couponCode }}.",
+      "CART_ADDTO_ERROR": "An error occured while adding a product to cart.",
+      "CART_AUTHORIZATION_ERROR": "The current user cannot perform operations on the cart.",
+      "CART_CREATE_ERROR": "An error occured while creating cart.",
+      "CART_MISSING_REQUIRED_OPTIONS_ERROR": "The product's required option(s) weren't entered.",
+      "EMPTY_CART_ERROR": "Cart does not contain products.",
+      "INACTIVE_CART_ERROR": "The cart is inactive",
+      "NO_CART_FOUND_ERROR": "No Cart found.",
+      "NO_CART_ITEM_FOUND_ERROR": "No Cart item found.",
+      "NO_VARIANT_FOUND_ERROR": "Could not add the product with SKU configurable to the shopping cart: The product that was requested doesn't exist. Verify the product and try again.",
+      "NO_VARIANT_SELECTED_ERROR": "Please specify the product's options.",
+      "ONE_COUPON_RESTRICTION_ERROR": "A coupon is already applied to the cart: {{ couponCode }}.",
+      "CART_REMOVECOUPON_DENIED_ERROR": "The coupon couldn't be deleted.",
+      "CART_REMOVECOUPON_ERROR": "An error occured while removing a coupon from the cart.",
+      "CART_UPDATE_ERROR": "An error occured while updating to cart.",
+      "BILLING_ADDRESS_REQUIRED_ERROR": "The billing address is required.",
+      "BILLING_ADDRESS_SAVING_ERROR": "An error occured while saving the billing address.",
+      "CHECKOUT_ALREADY_CREATED_ERROR": "Checkout already created for cart.",
+      "CHECKOUT_CREATE_ERROR": "An error occured while creating checkout.",
+      "EMAIL_REQUIRED_ERROR": "Email address is required.",
+      "EMAIL_ADDRESS_SAVING_ERROR": "An error occured while saving email.",
+      "NO_CHECKOUT_FOUND_ERROR": "No checkout found.",
+      "OUT_OF_STOCK_PRODUCT_IN_CART_ERROR": "Some of the products are out of stock.",
+      "PAYMENT_METHOD_NOT_AVAILABLE_ERROR": "Payment method is not available.",
+      "PAYMENT_METHOD_REQUIRED_ERROR": "No payment method provided.",
+      "PAYMENT_METHOD_SAVING_FOUND_ERROR": "An error occured while saving shipping method.",
+      "PLACE_ORDER_ERROR": "An error occured while placing order.",
+      "SHIPPING_ADDRESS_REQUIRED_ERROR": "The shipping address is required.",
+      "SHIPPING_ADDRESS_RESTRICTION_ERROR": "Some addresses can't be used due to the configurations for specific countries.",
+      "SHIPPING_ADDRESS_SAVING_ERROR": "An error occured while saving the shipping address.",
+      "SHIPPING_METHOD_NOT_AVAILABLE_ERROR": "Shipping method is not available.",
+      "SHIPPING_METHOD_REQUIRED_ERROR": "No shipping method provided",
+      "SHIPPING_METHOD_SAVING_FOUND_ERROR": "An error occured while saving shipping method."
     }
   }
 }
